fix wrap score and balance

--- a/src/app/gwt/player-board/player-board.component.scss
+++ b/src/app/gwt/player-board/player-board.component.scss
@@ -158,7 +158,8 @@ app-card {
   text-align: center;
   vertical-align: top;
   line-height: 20px;
-  font-size: 20px;
+  font-size: 16px;
+  word-wrap: normal;
   vertical-align: middle;
   line-height: 30px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
