--- a/src/app/shared/in-game-player/in-game-player.component.scss
+++ b/src/app/shared/in-game-player/in-game-player.component.scss
@@ -38,7 +38,8 @@ header {
   text-align: center;
   vertical-align: top;
   line-height: 20px;
-  font-size: 20px;
+  font-size: 16px;
+  word-wrap: normal;
   vertical-align: middle;
   line-height: 24px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.9);
